<resources>
    <string name="app_name">Numismatics</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OpenCode</string>
    <string name="nav_header_subtitle">opencodeiiita.github.io</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_analytics">AnalyticsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username_phone_number">Username/Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or_connect_using">or connect using</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?<font color="#0000FF"> Sign Up</font></string>
    <string name="date">Date</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
<<<<<<< HEAD
    <string name="submit">Submit</string>
</resources>
=======
</resources>

>>>>>>> 7f6063b9d33446b29cd92b50eefdfd8c8df4790a
