<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="157dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_illustration_login"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="350dp"
        android:layout_height="72dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/username_phone_number"
        android:paddingStart="30dp"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/ic_password_lock"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/sign_in_button_shape"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:hint="@string/or_connect_using"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="21dp"
        android:background="@color/orange_red"
        android:text="@string/continue_with_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="31dp"
        android:backgroundTint="#3F51B5"
        android:drawableLeft="@drawable/ic_facebook_icon"
        android:text="Sign In"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>